--- a/week_1/workshop_5/stap 10/email.html
+++ b/week_1/workshop_5/stap 10/email.html
@@ -15,6 +15,6 @@
 </div>
 <textarea placeholder="bericht*"></textarea>
 <br>
-<input type="submit" id="submit">
+<input type="submit" id="Verstuur">
 </body>
 </html>
