--- a/week_2/workshop_3/ns.html
+++ b/week_2/workshop_3/ns.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 <div id="ns_board" class="center_row">
-    <div id="platform"></div>
+    <div id="platform">
+        <div id="spoor_box">
+            <div id="blue_box"></div>
+            <p id="spoor_text">spoor</p>
+            <p id="spoor_num"><b>13</b><sup><small>B</small></sup></p>
+        </div>
+    </div>
     <div id="info" class="center_col">
         <div id="info_content">
             <div>
@@ -23,7 +29,9 @@
         <div class="destinations"><p class="departures">21:35 Intercity Leeuwarden rijdt niet</p></div>
         <div class="destinations"><p class="departures">09:20 Intercity Deventer</p></div>
     </div>
-    <div id="clock"></div>
+    <div id="clock_box">
+        <img id="clock" src="images/clock-11549399846g40vgnpdkc.png">
+    </div>
 </div>
 </body>
 </html>
