--- a/week_2/eindopdracht/kaarten.html
+++ b/week_2/eindopdracht/kaarten.html
@@ -5,7 +5,50 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div ></div>
+<div class="card">
+<div class="card_top">
+  <p>A</p>
+  <img src="imgs/klaver.jpg">
+</div>
+  <img class="garon" src="imgs/Garon.png">
+  <div class="card_bottom">
+  <img class="flip_img" src="imgs/klaver.jpg">
+  <p class="flip_text">A</p>
+</div>
+</div>
+<div class="card">
+  <div class="card_top">
+    <p style="color: red">A</p>
+    <img src="imgs/hart.jpg">
+  </div>
+  <img class="garon" src="imgs/Garon.png">
+  <div class="card_bottom">
+    <img class="flip_img" src="imgs/hart.jpg">
+    <p style="color: red" class="flip_text">A</p>
+  </div>
+</div>
+<div class="card">
+  <div class="card_top">
+    <p>A</p>
+    <img src="imgs/schoppen.jpg">
+  </div>
+  <img class="garon" src="imgs/Garon.png">
+  <div class="card_bottom">
+    <img class="flip_img" src="imgs/schoppen.jpg">
+    <p class="flip_text">A</p>
+  </div>
+</div>
+<div class="card">
+  <div class="card_top">
+    <p style="color: red">A</p>
+    <img src="imgs/ruit.jpg">
+  </div>
+  <img class="garon" src="imgs/Garon.png">
+  <div class="card_bottom">
+    <img class="flip_img" src="imgs/ruit.jpg">
+    <p style="color: red" class="flip_text">A</p>
+  </div>
+</div>
 <ul class="container">
   <li class="backwards">G</li>
 </ul>
