--- a/week_2/eindopdracht/kaarten.html
+++ b/week_2/eindopdracht/kaarten.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Title as you want</title>
   <link rel="stylesheet" href="styles.css">
@@ -8,44 +8,44 @@
 <div class="card">
 <div class="card_top">
   <p>A</p>
-  <img src="imgs/klaver.jpg">
+  <img src="imgs/klaver.jpg" alt="#">
 </div>
-  <img class="garon" src="imgs/Garon.png">
+  <img class="garon" src="imgs/Garon.png" alt="#">
   <div class="card_bottom">
-  <img class="flip_img" src="imgs/klaver.jpg">
+  <img class="flip_img" src="imgs/klaver.jpg" alt="#">
   <p class="flip_text">A</p>
 </div>
 </div>
 <div class="card">
   <div class="card_top">
     <p style="color: red">A</p>
-    <img src="imgs/hart.jpg">
+    <img src="imgs/hart.jpg" alt="#">
   </div>
-  <img class="garon" src="imgs/Garon.png">
+  <img class="garon" src="imgs/Garon.png" alt="#">
   <div class="card_bottom">
-    <img class="flip_img" src="imgs/hart.jpg">
+    <img class="flip_img" src="imgs/hart.jpg" alt="#">
     <p style="color: red" class="flip_text">A</p>
   </div>
 </div>
 <div class="card">
   <div class="card_top">
     <p>A</p>
-    <img src="imgs/schoppen.jpg">
+    <img src="imgs/schoppen.jpg" alt="#">
   </div>
-  <img class="garon" src="imgs/Garon.png">
+  <img class="garon" src="imgs/Garon.png" alt="#">
   <div class="card_bottom">
-    <img class="flip_img" src="imgs/schoppen.jpg">
+    <img class="flip_img" src="imgs/schoppen.jpg" alt="#">
     <p class="flip_text">A</p>
   </div>
 </div>
 <div class="card">
   <div class="card_top">
     <p style="color: red">A</p>
-    <img src="imgs/ruit.jpg">
+    <img src="imgs/ruit.jpg" alt="#">
   </div>
-  <img class="garon" src="imgs/Garon.png">
+  <img class="garon" src="imgs/Garon.png" alt="#">
   <div class="card_bottom">
-    <img class="flip_img" src="imgs/ruit.jpg">
+    <img class="flip_img" src="imgs/ruit.jpg" alt="#">
     <p style="color: red" class="flip_text">A</p>
   </div>
 </div>
