--- a/week_3/workshop_2/index.html
+++ b/week_3/workshop_2/index.html
@@ -12,6 +12,12 @@
 </header>
 <div id="container">
     <form method="get">
+        <div class="content_text">
+            <div>
+                <h2>JE GEGEVENS</h2>
+                <h3>Wat moet er op de factuur staan</h3>
+            </div>
+        </div>
         <div class="row">
             <div class="left">
                 <p>Type bestelling</p>
@@ -134,6 +140,13 @@
                 <input style="width: 150px" type="color">
             </div>
         </div>
+        <div class="content_text">
+            <div>
+                <h2>BEWAAR JE GEGEVENS</h2>
+                <h3>Handig voor de volgende keer</h3>
+            </div>
+        </div>
+
     </form>
 </div>
 </body>
