jesse we gav to cook

--- a/week_3/workshop_2/index.html
+++ b/week_3/workshop_2/index.html
@@ -73,8 +73,8 @@
             </div>
             <div class="right">
                 <p>Nederland</p>
-                <i class='fas fa-angle-right'></i>
-                <p>In België laten bezorgen</p>
+                <i style="color: #23A3EE" class='fas fa-angle-right'></i>
+                <p style="color: #23A3EE">In België laten bezorgen</p>
             </div>
         </div>
         <div class="row">
@@ -90,6 +90,7 @@
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>E-mailadres</p>
             </div>
             <div class="right">
@@ -98,6 +99,7 @@
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>Telefoonnummer</p>
             </div>
             <div class="right">
@@ -106,6 +108,7 @@
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>Geboortedatum</p>
             </div>
             <div class="right">
@@ -114,6 +117,7 @@
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>Verzendwijze factuur</p>
             </div>
             <div class="right">
@@ -125,15 +129,18 @@
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>Nieuwsbrief</p>
             </div>
             <div class="right">
                 <input type="checkbox" id="nieuwsbrief" value="nieuwsbrief">
-                <label for="nieuwsbrief">Ja, ik wil de Coolblue-nieuwsbrief met voor <br> mijn volgende bestelling</label>
+                <p>Ja, ik wil de Coolblue-nieuwsbrief met voor <br>mijn volgende bestelling</p>
+                <p style="color: orange">€5,-cadeaubon </p>
             </div>
         </div>
         <div class="row">
             <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
                 <p>Kleur verpakking</p>
             </div>
             <div class="right">
@@ -146,8 +153,60 @@
                 <h3>Handig voor de volgende keer</h3>
             </div>
         </div>
-
+        <div class="row">
+            <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
+                <p>Wachtwoord</p>
+            </div>
+            <div class="right">
+                <input type="password" id="wachtwoord" name="wachtwoord" placeholder="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="left">
+            </div>
+            <div class="right">
+                <p>Minimaal 6 karakters <br>verder doen we niet moeilijk</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="left">
+                <i class="fa fa-info-circle" style="color: #388DE7"></i>
+                <p>Wachtwoord bevestigen</p>
+            </div>
+            <div class="right">
+                <input type="password" id="wachtwoord_confirm" name="wachtwoord_confirm" placeholder="">
+            </div>
+        </div>
+        <div id="submit_div">
+            <div id="submit_box">
+                <input type="submit" id="submit" value="verder">
+            </div>
+        </div>
     </form>
+    <footer>
+        <div class="footer_content">
+            <div>
+                <h2 style="color: white"> <i style="font-size: 40px" class="fa fa-phone"></i>Bel 010 7988999.</h2>
+                <h3 style="color: white">Voor acute service.</h3>
+                <p style="color: white"><b>klantenservice is nu open</b></p>
+                <p style="color: white">je kunt ons 7 dagen per week bereiken. Vandaag is <br>de klantenservice tot 23:59 uur open. </p>
+            </div>
+        </div>
+        <div class="footer_content">
+            <div>
+                <h2 style="color: white">Service.</h2>
+                <h3 style="color: white">Onderdeel van Coolblue</h3>
+                    <ul>
+                    <li class="service_li">Gratis verzending en retourneren</li>
+                    <li class="service_li">Voor 23:59 uur besteld, morgen is huis</li>
+                    <li class="service_li">Track and trace, volg je packet</li>
+                    <li class="service_li">Statusupdates via e-mail</li>
+                    <li class="service_li">Winkels in Amsterdam, Eindhoven, Groningen,<br>Rotterdam en Utrecht</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
