--- a/week_3/workshop_3/index.html
+++ b/week_3/workshop_3/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div style="margin: 10px">
-                <h3>candy</h3>
+                <h3>oki</h3>
                 <hr>
                 <div class="dropdown">
                     <button class="dropbtn">Subcategory 1</button>
