--- a/week_3/workshop_3/index.html
+++ b/week_3/workshop_3/index.html
@@ -329,7 +329,9 @@
     <div><h3>Payment</h3>
         <p>Pay quick and safe</p></div>
     <div><h3>Delivery Costs</h3>
-        <p>None</p></div>
+        <p>If you are in Europe its free</p>
+        <p>When you are outside of Europe the cost depends <br>on the delivery service</p>
+    </div>
     <div>
         <h3>Service</h3>
         <ul>
@@ -351,7 +353,7 @@
 
 </div>
 <footer>
-    <p>Webstore by Joe Biden</p>
+    <p>Webstore by &copyJoe Biden</p>
 </footer>
 </body>
 </html>
