--- a/week_3/workshop_3/index.html
+++ b/week_3/workshop_3/index.html
@@ -30,23 +30,59 @@
     <div id="filters">
         <div>
             <div style="margin: 10px">
-                <h3>Category</h3>
+                <h3>Ship classes</h3>
                 <hr>
                 <div class="dropdown">
-                    <button class="dropbtn">Items</button>
+                    <button class="dropbtn">Fighters</button>
                     <div class="dropdown-content">
-                        <a href="#">Limited items</a>
-                        <a href="#">Permanent stock</a>
-                        <a href="#">Premium offers</a>
+                        <a href="#">Cobra Bomber Wing</a>
+                        <a href="#">Claw Fighter Wing</a>
+                        <a href="#">Dagger Bomber Wing</a>
+                        <a href="#">Longbow Bomber Wing</a>
+                        <a href="#">Trident Torpedo Bomber Wing</a>
+                        <a href="#">Wasp Interceptor Drone Wing</a>
+                        <a href="#">Xyphos Support Wing</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Stuff</button>
+                    <button class="dropbtn">Frigates</button>
                     <div class="dropdown-content">
-                        <a href="#">Stuff 1</a>
-                        <a href="#">Stuff 2</a>
-                        <a href="#">Stuff 3</a>
-                        <a href="#">Stuff 4</a>
+                        <a href="#">Afflictor</a>
+                        <a href="#">Hyperion</a>
+                        <a href="#">Mercury</a>
+                        <a href="#">Omen</a>
+                        <a href="#">Scarab</a>
+                        <a href="#">Shade</a>
+                        <a href="#">Tempest</a>
+                        <a href="#">Wolf</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Destroyers</button>
+                    <div class="dropdown-content">
+                        <a href="#">Buffalo</a>
+                        <a href="#">Harbinger</a>
+                        <a href="#">Medusa</a>
+                        <a href="#">Phantom</a>
+                        <a href="#">Shrike</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Cruisers</button>
+                    <div class="dropdown-content">
+                        <a href="#">Apogee</a>
+                        <a href="#">Aurora</a>
+                        <a href="#">Doom</a>
+                        <a href="#">Fury</a>
+                        <a href="#">Revenant</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Capitals</button>
+                    <div class="dropdown-content">
+                        <a href="#">Astral</a>
+                        <a href="#">Odyssey</a>
+                        <a href="#">Paragon</a>
                     </div>
                 </div>
             </div>
@@ -54,7 +90,7 @@
                 <h3>oki</h3>
                 <hr>
                 <div class="dropdown">
-                    <button class="dropbtn">Subcategory 1</button>
+                    <button class="dropbtn">1 1</button>
                     <div class="dropdown-content">
                         <a href="#">Link 1</a>
                         <a href="#">Link 2</a>
@@ -83,11 +119,86 @@
     </div>
     <div id="products">
         <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <img src="imgs/ParagonShipIcon.png">
+            <h3>Paragon</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
+                    <p>Capital Ship</p>
+                    <p>Price $69,-</p>
+                    <p>In stock</p>
+                </div>
+                <div class="add_cart">
+                    <p>Add to cart</p>
+                    <img class="cart_img" src="imgs/freadtatin34hm.png">
+                </div>
+            </div>
+        </div>
+        <div class="product_item">
+            <img src="imgs/TempestShipIcon.png">
+            <h3>Tempest</h3>
+            <div class="info_row">
+                <div>
+                    <p>Carrier</p>
+                    <p>Price $69,-</p>
+                    <p>In stock</p>
+                </div>
+                <div class="add_cart">
+                    <p>Add to cart</p>
+                    <img class="cart_img" src="imgs/freadtatin34hm.png">
+                </div>
+            </div>
+        </div>
+        <div class="product_item">
+            <img src="imgs/ShadeShipIcon.png">
+            <h3>Shade</h3>
+            <div class="info_row">
+                <div>
+                    <p>Frigate</p>
+                    <p>Price $69,-</p>
+                    <p>In stock</p>
+                </div>
+                <div class="add_cart">
+                    <p>Add to cart</p>
+                    <img class="cart_img" src="imgs/freadtatin34hm.png">
+                </div>
+            </div>
+        </div>
+        <div class="product_item">
+            <img src="imgs/OdysseyShipIcon.png">
+            <h3>Odyssey</h3>
+            <div class="info_row">
+                <div>
+                    <p>Carrier</p>
+                    <p>Price $69,-</p>
+                    <p>In stock</p>
+                </div>
+                <div class="add_cart">
+                    <p>Add to cart</p>
+                    <img class="cart_img" src="imgs/freadtatin34hm.png">
+                </div>
+            </div>
+        </div>
+        <div class="product_item">
+            <img src="imgs/MedusaShipIcon.png">
+            <h3>Medusa</h3>
+            <div class="info_row">
+                <div>
+                    <p>Destroyer</p>
+                    <p>Price $69,-</p>
+                    <p>In stock</p>
+                </div>
+                <div class="add_cart">
+                    <p>Add to cart</p>
+                    <img class="cart_img" src="imgs/freadtatin34hm.png">
+                </div>
+            </div>
+        </div>
+        <div class="product_item">
+            <img src="imgs/Cobra_bomber.png">
+            <h3>Cobra Bomber Wing</h3>
+            <div class="info_row">
+                <div>
+                    <p>Fighter</p>
                     <p>Price $69,-</p>
                     <p>In stock</p>
                 </div>
@@ -99,12 +210,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -114,12 +225,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -129,12 +240,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -144,12 +255,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -159,12 +270,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -174,12 +285,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -189,12 +300,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -204,12 +315,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -219,12 +330,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -234,87 +345,12 @@
         </div>
         <div class="product_item">
             <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
+            <h3>[redacted]</h3>
             <div class="info_row">
                 <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
-                </div>
-                <div class="add_cart">
-                    <p>Add to cart</p>
-                    <img class="cart_img" src="imgs/freadtatin34hm.png">
-                </div>
-            </div>
-        </div>
-        <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
-            <div class="info_row">
-                <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
-                </div>
-                <div class="add_cart">
-                    <p>Add to cart</p>
-                    <img class="cart_img" src="imgs/freadtatin34hm.png">
-                </div>
-            </div>
-        </div>
-        <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
-            <div class="info_row">
-                <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
-                </div>
-                <div class="add_cart">
-                    <p>Add to cart</p>
-                    <img class="cart_img" src="imgs/freadtatin34hm.png">
-                </div>
-            </div>
-        </div>
-        <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
-            <div class="info_row">
-                <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
-                </div>
-                <div class="add_cart">
-                    <p>Add to cart</p>
-                    <img class="cart_img" src="imgs/freadtatin34hm.png">
-                </div>
-            </div>
-        </div>
-        <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
-            <div class="info_row">
-                <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
-                </div>
-                <div class="add_cart">
-                    <p>Add to cart</p>
-                    <img class="cart_img" src="imgs/freadtatin34hm.png">
-                </div>
-            </div>
-        </div>
-        <div class="product_item">
-            <img src="imgs/noimg.png">
-            <h3>Very good product</h3>
-            <div class="info_row">
-                <div>
-                    <p>please buy it</p>
-                    <p>Price $69,-</p>
-                    <p>In stock</p>
+                    <p>[redacted]</p>
+                    <p>Price [redacted],-</p>
+                    <p>[redacted]</p>
                 </div>
                 <div class="add_cart">
                     <p>Add to cart</p>
@@ -329,8 +365,7 @@
     <div><h3>Payment</h3>
         <p>Pay quick and safe</p></div>
     <div><h3>Delivery Costs</h3>
-        <p>If you are in Europe its free</p>
-        <p>When you are outside of Europe the cost depends <br>on the delivery service</p>
+        <p>All purchases will be taxed with 15%</p>
     </div>
     <div>
         <h3>Service</h3>
